redesigned main page - TODO: redesign add/edit shift type page - issue #3

--- a/web-app/css/calendar.css
+++ b/web-app/css/calendar.css
@@ -20,7 +20,7 @@
 }
 
 .selectedDay {
-    background: #ff0000;
+    background: #ffaa00;
     margin: auto;
 }
 
